--- a/content/data/project-tags.yaml
+++ b/content/data/project-tags.yaml
@@ -1,9 +1,10 @@
 ---
 project tags:
 - Brand Design
+- Mechanical Design
+- UX Design
+- Sculpture
 - Code
 - 3D & CAD
-- Mechanical Design
 - Electronics
 - Web Design
-- UX Design
