--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@ baseURL = "/"
 languageCode = "en-us"
 theme = "tale-theme"
 title = "Jasper Katzban"
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
